fix fastsync to not be confused on new members SERVER-2717